fixes media queries for image on side, fixes submenu on iPhone portrait

--- a/themes/bootstrapndlc/css-compiled/theme.css
+++ b/themes/bootstrapndlc/css-compiled/theme.css
@@ -676,6 +676,10 @@ html.js.csstransforms3d body {
   span.herotext {
     font-size: 100%;
     padding: 10px; } }
+@media (max-width: 1280px) {
+  .circular-sess {
+    width: 250px;
+    height: 250px; } }
 @media (max-width: 1080px) {
   .circular-sess {
     width: 200px;
@@ -686,7 +690,7 @@ html.js.csstransforms3d body {
     width: 263px;
     height: 490px;
     overflow: visible; } }
-@media (min-width: 380px) and (max-width: 1220px) {
+@media (min-width: 280px) and (max-width: 1220px) {
   .ribbon ul.list-inline {
     float: left; }
 
@@ -759,11 +763,6 @@ html.js.csstransforms3d body {
 
   .collapse.in {
     display: block !important; } }
-@media (max-width: 843px) {
-  .ribbon {
-    width: auto;
-    margin: auto 0;
-    height: auto; } }
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-unit {
@@ -807,7 +806,7 @@ html.js.csstransforms3d body {
     display: none; }
 
   .ribbon ul.list-inline {
-    width: 300px;
+    width: 256px;
     display: inline;
     background-color: transparent; } }
 /*ipad  mini portrait*/
@@ -849,7 +848,7 @@ html.js.csstransforms3d body {
   span.herotext {
     font-size: 50%;
     padding-left: 27px; } }
-@media (max-device-width: 1080px) {
+@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1080px) {
   /*hide text in table header*/
   .col-md-9 th:nth-child(-n+3) {
     color: #432f3c;
@@ -892,34 +891,22 @@ html.js.csstransforms3d body {
   body.program .col-md-9 td:nth-of-type(3):before {
     content: "Format"; }
 
-  td:nth-of-type(4):before {
-    content: ""; }
-
-  td:nth-of-type(5):before {
-    content: ""; }
-
-  td:nth-of-type(6):before {
-    content: ""; }
-
-  td:nth-of-type(7):before {
-    content: ""; }
-
-  td:nth-of-type(8):before {
-    content: ""; }
-
-  td:nth-of-type(9):before {
-    content: ""; }
-
-  td:nth-of-type(10):before {
-    content: ""; }
-
-  body.collections-and-access .col-md-9 td:nth-of-type(1):before, body.programming-outreach-advocacy .col-md-9 td:nth-of-type(1):before, body.personnel-management-organization .col-md-9 td:nth-of-type(1):before, body.challenging-topics .col-md-9 td:nth-of-type(1):before {
+  body.collections-and-access .col-md-9 td:nth-of-type(1):before,
+  body.programming-outreach-advocacy .col-md-9 td:nth-of-type(1):before,
+  body.personnel-management-organization .col-md-9 td:nth-of-type(1):before,
+  body.challenging-topics .col-md-9 td:nth-of-type(1):before {
     content: "Title"; }
 
-  body.collections-and-access .col-md-9 td:nth-of-type(2):before, body.programming-outreach-advocacy .col-md-9 td:nth-of-type(2):before, body.personnel-management-organization .col-md-9 td:nth-of-type(2):before, body.challenging-topics .col-md-9 td:nth-of-type(2):before {
+  body.collections-and-access .col-md-9 td:nth-of-type(2):before,
+  body.programming-outreach-advocacy .col-md-9 td:nth-of-type(2):before,
+  body.personnel-management-organization .col-md-9 td:nth-of-type(2):before,
+  body.challenging-topics .col-md-9 td:nth-of-type(2):before {
     content: "Presenter(s)"; }
 
-  body.collections-and-access .col-md-9 td:nth-of-type(3):before, body.programming-outreach-advocacy .col-md-9 td:nth-of-type(3):before, body.personnel-management-organization .col-md-9 td:nth-of-type(3):before, body.challenging-topics .col-md-9 td:nth-of-type(3):before {
+  body.collections-and-access .col-md-9 td:nth-of-type(3):before,
+  body.programming-outreach-advocacy .col-md-9 td:nth-of-type(3):before,
+  body.personnel-management-organization .col-md-9 td:nth-of-type(3):before,
+  body.challenging-topics .col-md-9 td:nth-of-type(3):before {
     content: "Format"; } }
 /*
 Max width before this PARTICULAR table gets nasty
